fix: make 406 responses deterministic
